# VIRALL

./: practiceSIRModel.py  practice_all.py  pyproject.toml  sample_code.virall  web_application.py
code_samples/: idempotence.virall  sample_code.virall
markdown_files/: about.md  compartmental_modeling.md  contribute.md  disease_transmission.md
virall_dsl/: SIR_model.virall  create_equations.py  differential_relationships.csv  differential_relationships_backup.csv  extra_virall.py  virall.py  virall.tx
