[tool.poetry]
name = "VIRALL"
version = "1.0.0"
description = ""
authors = ["Maddy Kapfhammer <maddy.kapfhammer@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.6,<3.11"
streamlit = "^1.8.1"
matplotlib = "^3.5.1"
textX = "^3.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"